login feature update / add edit project